Version 4.2.20 - 2019-02-19
* Bug fixes (see mercurial logs for details)

Version 4.2.19 - 2019-01-22
* Bug fixes (see mercurial logs for details)

Version 4.2.18 - 2019-01-05
* Bug fixes (see mercurial logs for details)

Version 4.2.17 - 2018-12-02
* Bug fixes (see mercurial logs for details)

Version 4.2.16 - 2018-11-12
* Bug fixes (see mercurial logs for details)
* Check read access on field in search domain (issue7766)

Version 4.2.15 - 2018-08-20
* Bug fixes (see mercurial logs for details)

Version 4.2.14 - 2018-08-03
* Bug fixes (see mercurial logs for details)

Version 4.2.13 - 2018-07-05
* Bug fixes (see mercurial logs for details)

Version 4.2.12 - 2018-06-11
* Bug fixes (see mercurial logs for details)

Version 4.2.11 - 2018-05-07
* Bug fixes (see mercurial logs for details)

Version 4.2.10 - 2018-03-01
* Bug fixes (see mercurial logs for details)

Version 4.2.9 - 2018-01-04
* Bug fixes (see mercurial logs for details)

Version 4.2.8 - 2017-12-04
* Bug fixes (see mercurial logs for details)

Version 4.2.7 - 2017-11-07
* Bug fixes (see mercurial logs for details)

Version 4.2.6 - 2017-08-08
* Bug fixes (see mercurial logs for details)

Version 4.2.5 - 2017-07-01
* Bug fixes (see mercurial logs for details)

Version 4.2.4 - 2017-06-05
* Bug fixes (see mercurial logs for details)

Version 4.2.3 - 2017-04-03
* Bug fixes (see mercurial logs for details)
* Sanitize path in file_open against suffix (CVE-2017-0360)

Version 4.2.2 - 2017-03-10
* Bug fixes (see mercurial logs for details)

Version 4.2.1 - 2017-01-03
* Bug fixes (see mercurial logs for details)

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Add toolbar attribute for richtext widget
* Add PYSON widget
* Allow to define the text color and background color in calendar view
* Allow to override cache implementation
* Add button rule
* Allow to specify translatable languages in trytond-admin
* Add datetime_field on Reference
* Merge Spanish's into Spanish (Latin American)