@@ -1,3 +1,5 @@
+* Check read access on field in search order (issue8189)
+
 Version 4.2.20 - 2019-02-19
 * Bug fixes (see mercurial logs for details)
 
